= HEAD

* Use allocate instead of new in rack app (jeremyevans)

* Add chunked plugin, for easy streaming of template responses using Transfer-Encoding: chunked (jeremyevans)

* Add namespace support to the multi_route plugin, to support more complex applications (jeremyevans)

* Make r.multi_route use named route return value if not passed a block (jeremyevans)

* Make r.multi_route prefer longer route if multiple routes have the same prefix (jeremyevans)

* Add caching plugin, for handling http caching (jeremyevans)

* Support adding middleware after the route block has been added (jeremyevans)

* Allow Roda subclasses to use route block from superclass (jeremyevans)

* Have r.multi_route ignore non-String named routes (jeremyevans)

* Pick up newly added named routes while running in the multi_route plugin, useful for development (jeremyevans)

* Add path plugin, for named path support (jeremyevans) (#4)

* Add error_email plugin, for easily emailing an error notification for an exception (jeremyevans)

= 1.0.0 (2014-08-19)

* Don't have :extension hash matcher force a terminal match (jeremyevans)

* Add :content option to view method in render plugin to use given content instead of rendering a template (jeremyevans)

* Add :escape option to render plugin for using erb templates where <%= %> escapes and <%== %> does not (jeremyevans)

* Make multi_route plugin route("route_name") method a request method instead of an instance method (jeremyevans)

* Add r.multi_route method to multi_route plugin, for dispatching to named route based on first segment in path (jeremyevans)

* Allow non-GET requests to use r.redirect with no argument, redirecting to current path (jeremyevans)

* Add head plugin, for handling HEAD requests like GET requests with an empty body (jeremyevans)

* Optimize consuming patterns by using a positive lookahead assertion (jeremyevans)

* Add not_allowed plugin, for automatically returning 405 Method Not Allowed responses (jeremyevans)
